Styled responsive header

--- a/src/partial/common/header.html
+++ b/src/partial/common/header.html
@@ -1,3 +1,20 @@
 <header class="header">
-    <img src="images/logo.svg">
+    <a href="/" class="header__logo"></a>
+    <div class="header__icon-close"></div>
+    <nav class="header__nav">
+      <ul class="header__nav-list">
+        <li class="header__nav-item"><a href="#" class="header__nav-link link">About</a></li>
+        <li class="header__nav-item"><a href="#" class="header__nav-link link">Pricing</a></li>
+        <li class="header__nav-item"><a href="#" class="header__nav-link link">FAQ</a></li>
+        <li class="header__nav-item"><a href="#" class="header__nav-link link">Contact</a></li>
+      </ul>
+      <div class="header__nav-login">
+        <a href="#" class="header__nav-link">Login <img src="images/login-icon.svg" class="header__nav-login-icon" alt="login"></a>
+      </div>
+    </nav>
+    <div class="header__icon-hamburger">
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
+    </div>
 </header>
