Styled responsive Expand Presence Section

--- a/src/partial/main-screen.html
+++ b/src/partial/main-screen.html
@@ -3,7 +3,7 @@
       <div class="main-screen__info">
         <h1 class="main-screen__info-title" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">Turn your website into your mobile app</h1>
         <p class="main-screen__info-desc" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">Engage your customers. <br> No coding. Just 3 easy steps.</p>
-        <form action="" class="main-screen__info-form" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000">
+        <form action="" class="main-screen__info-form" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000" data-aos-offset="0">
           <input type="text" value="" placeholder="Enter your website URL" class="main-screen__info-form-input">
           <input type="submit" value="Get Started" class="main-screen__info-form-btn">
         </form>
