Styled responsive features steps section

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,3 +11,5 @@
 @import "blocks/main-screen";
 @import "blocks/expand-presence";
 @import "blocks/key-features";
+@import "blocks/features-steps";
+
