Styled plans section

--- a/src/partial/plans.html
+++ b/src/partial/plans.html
@@ -1,5 +1,124 @@
-<section class="plans__wrapper" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">
+<section class="plans__wrapper">
   <div class="plans">
-plans
+    <div class="plans__header" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">
+      <p class="plans__header-title">Start Here</p>
+      <img src="images/long-arrow-icon.svg" class="plans__header-arrow" alt="Start Here">
+      <p class="plans__header-title plans__header-title--last">Then Choose Where You Publish Your App</p>
+    </div>
+    <ul class="plans__list">
+      <li class="plans__item" data-aos="fade-up"  data-aos-delay="150"  data-aos-duration="1000">
+          <div class="plans__item-header">
+            <p class="plans__item-header-title">Build Your Mobile App </p>
+          </div>
+          <div class="plans__item-price">
+            <p class="plans__item-price-value">Free</p>
+          </div>
+          <ul class="plans__item-desc">
+            <li class="plans__item-desc-item">
+                <p class="plans__item-desc-title plans__item-desc-title--obscure">Use your website as the base for your mobile app</p>
+            </li>
+            <li class="plans__item-desc-item">
+              <p class="plans__item-desc-title plans__item-desc-title--gray">Full interative preview</p>
+            </li>
+            <li class="plans__item-desc-item">
+              <p class="plans__item-desc-title plans__item-desc-title--gray">Share your app online or via SMS</p>
+            </li>
+          </ul>
+          <button type="button" class="plans__item-startedBtn">Get Started</button>
+          <footer class="plans__item-footer"></footer>
+      </li>
+      <li class="plans__itemDesc" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">
+          <p>Then Choose Where You Publish Your App</p>
+      </li>
+      <li class="plans__item" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000">
+        <div class="plans__item-header">
+          <p class="plans__item-header-title">Android</p>
+          <p class="plans__item-header-subTitle">Publish Your Own Branded App In Google Play</p>
+        </div>
+        <div class="plans__item-price">
+          <p class="plans__item-price-value">$19.99</p>
+          <p class="plans__item-price-desc">per month</p>
+        </div>
+        <ul class="plans__item-desc">
+          <li class="plans__item-desc-item">
+              <img src="images/green-arrow-icon.svg" class="plans__item-desc-arrow" alt="Arrow">
+              <p class="plans__item-desc-title plans__item-desc-title--obscure">Available on All Android Devices</p>
+          </li>
+          <li class="plans__item-desc-item">
+            <p class="plans__item-desc-title plans__item-desc-title--gray">Unlimited Push Alerts</p>
+          </li>
+          <li class="plans__item-desc-item">
+            <p class="plans__item-desc-title plans__item-desc-title--gray">Customizable Push Categories</p>
+          </li>
+        </ul>
+        <button type="button" class="plans__item-startedBtn">Get Started</button>
+        <footer class="plans__item-footer"></footer>
+      </li>
+      <li class="plans__item" data-aos="fade-up"  data-aos-delay="250"  data-aos-duration="1000">
+        <div class="plans__item-header">
+          <p class="plans__item-header-title">iOS</p>
+          <p class="plans__item-header-subTitle">Publish Your Own Branded App In App Store</p>
+        </div>
+        <div class="plans__item-price">
+          <p class="plans__item-price-value">$19.99</p>
+          <p class="plans__item-price-desc">per month</p>
+        </div>
+        <ul class="plans__item-desc">
+          <li class="plans__item-desc-item">
+              <img src="images/green-arrow-icon.svg" class="plans__item-desc-arrow" alt="Arrow">
+              <p class="plans__item-desc-title plans__item-desc-title--obscure">Available on All iOS Devices</p>
+          </li>
+          <li class="plans__item-desc-item">
+            <p class="plans__item-desc-title plans__item-desc-title--gray">Unlimited Push Alerts</p>
+          </li>
+          <li class="plans__item-desc-item">
+            <p class="plans__item-desc-title plans__item-desc-title--gray">Customizable Push Categories</p>
+          </li>
+        </ul>
+        <button type="button" class="plans__item-startedBtn">Get Started</button>
+        <footer class="plans__item-footer">
+          <p class="plans__item-footer-desc">
+            You Will Need Your Own Apple Developer Account.
+            <a href="#" class="plans__item-footer-link">Find Out More</a>
+          </p>
+        </footer>
+      </li>
+      <li class="plans__item plans__item--both" data-aos="fade-up"  data-aos-delay="300"  data-aos-duration="1000">
+        <div class="plans__item-limited">
+          <p class="plans__item-limited-title">Limited offer</p>
+          <p class="plans__item-limited-desc">Only $19.99 a month to publish in both major app stores </p>
+        </div>
+          <div class="plans__item-header">
+            <p class="plans__item-header-title">Both</p>
+            <p class="plans__item-header-subTitle">Publish Your Own Branded App In Google Play & The App Store</p>
+          </div>
+          <div class="plans__item-price">
+            <p class="plans__item-price-sale">$39.99</p>
+            <p class="plans__item-price-value">$19.99</p>
+            <p class="plans__item-price-desc">per month</p>
+          </div>
+          <ul class="plans__item-desc">
+            <li class="plans__item-desc-item">
+                <img src="images/white-arrow-icon.svg" class="plans__item-desc-arrow" alt="Arrow">
+                <p class="plans__item-desc-title">Available on All Android Devices</p>
+            </li>
+            <li class="plans__item-desc-item">
+                <img src="images/white-arrow-icon.svg" class="plans__item-desc-arrow" alt="Arrow">
+              <p class="plans__item-desc-title">Unlimited Push Alerts</p>
+            </li>
+            <li class="plans__item-desc-item">
+                <img src="images/white-arrow-icon.svg" class="plans__item-desc-arrow" alt="Arrow">
+              <p class="plans__item-desc-title">Customizable Push Categories</p>
+            </li>
+          </ul>
+          <button type="button" class="plans__item-startedBtn">Get Started</button>
+          <footer class="plans__item-footer">
+            <p class="plans__item-footer-desc">
+              You Will Need Your Own Apple Developer Account.
+              <a href="#" class="plans__item-footer-link">Find Out More</a>
+            </p>
+          </footer>
+        </li>
+    </ul>
  </div>
 </section>
