Styled home page

--- a/src/partial/common/main-header.html
+++ b/src/partial/common/main-header.html
@@ -1,13 +1,13 @@
-<div class="header__wrapper" id="header">
+<div class="header__wrapper header__wrapper--home" id="header">
   <header class="header">
       <a href="/" class="header__logo" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000"></a>
       <div class="header__icon-close" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000"></div>
       <nav class="header__nav">
         <ul class="header__nav-list">
           <li class="header__nav-item" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000"><a href="about.html" class="header__nav-link link">About</a></li>
-          <li class="header__nav-item" data-aos="fade-up"  data-aos-delay="150"  data-aos-duration="1000"><a href="index.html/#pricing" class="header__nav-link link">Pricing</a></li>
+          <li class="header__nav-item" data-aos="fade-up"  data-aos-delay="150"  data-aos-duration="1000"><a href="#pricing" class="header__nav-link link">Pricing</a></li>
           <li class="header__nav-item" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000"><a href="faq.html" class="header__nav-link link">FAQ</a></li>
-          <li class="header__nav-item" data-aos="fade-up"  data-aos-delay="250"  data-aos-duration="1000"><a href="index.html/#contact-form" class="header__nav-link link">Contact</a></li>
+          <li class="header__nav-item" data-aos="fade-up"  data-aos-delay="250"  data-aos-duration="1000"><a href="#contact-form" class="header__nav-link link">Contact</a></li>
         </ul>
         <div class="header__nav-login" data-aos="fade-up"  data-aos-delay="300"  data-aos-duration="1000" data-aos-offset="200">
           <a href="#" class="header__nav-link">Login <img src="images/login-icon.svg" class="header__nav-login-icon" alt="login"></a>
