--- a/src/partial/plans.html
+++ b/src/partial/plans.html
@@ -1,4 +1,4 @@
-<section class="plans__wrapper">
+<section class="plans__wrapper" id="pricing">
   <div class="plans">
     <div class="plans__header" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">
       <p class="plans__header-title">Start Here</p>
