--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,6 +6,7 @@
 
 //Commons
 @import 'commons/header';
+@import 'commons/footer';
 
 //Blocks
 @import "blocks/main-screen";
@@ -15,3 +16,4 @@
 @import "blocks/showcase";
 @import "blocks/plans";
 @import "blocks/convert-sites";
+@import "blocks/contact-form";
