--- a/src/partial/convert-sites.html
+++ b/src/partial/convert-sites.html
@@ -1,4 +1,4 @@
-<section class="convert-sites__wrapper">
+<section class="convert-sites__wrapper" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">
   <div class="convert-sites">
       <h4 class="convert-sites__title">We Convert Sites From:</h4>
       <ul class="convert-sites__list">
