Styled faq page

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,3 +17,5 @@
 @import "blocks/plans";
 @import "blocks/convert-sites";
 @import "blocks/contact-form";
+@import "blocks/faq-form";
+@import "blocks/faq";
