--- a/src/partial/common/footer.html
+++ b/src/partial/common/footer.html
@@ -10,9 +10,9 @@
       </div>
       <ul class="footer__nav">
           <li class="footer__nav-item" ><a href="about.html" class="footer__nav-link link">About</a></li>
-          <li class="footer__nav-item" ><a href="#pricing" class="footer__nav-link link">Pricing</a></li>
+          <li class="footer__nav-item" ><a href="#pricing" class="footer__nav-link footer__nav-link--anchor link">Pricing</a></li>
           <li class="footer__nav-item" ><a href="faq.html" class="footer__nav-link link">FAQ</a></li>
-          <li class="footer__nav-item" ><a href="#contact-form" class="footer__nav-link link">Contact</a></li>
+          <li class="footer__nav-item" ><a href="#contact-form" class="footer__nav-link footer__nav-link--anchor link">Contact</a></li>
       </ul>
     </div>
     <div class="footer__bottom">
