Styled Gallery section

--- a/src/partial/faq-form.html
+++ b/src/partial/faq-form.html
@@ -1,7 +1,7 @@
 <section class="faq-form__wrapper">
     <div class="faq-form__inner">
-      <h3 class="faq-form__sectionTitle">faq</h3>
-      <h2 class="faq-form__title">Some of your questions <br /> answered in one place</h2>
+      <h3 class="faq-form__sectionTitle" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000" data-aos-offset="0">faq</h3>
+      <h2 class="faq-form__title" data-aos="fade-up"  data-aos-delay="150"  data-aos-duration="1000" data-aos-offset="0">Some of your questions <br /> answered in one place</h2>
       <form action="" class="faq-form" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000" data-aos-offset="0">
           <img src="images/search-icon.svg" class="faq-form__searchIcon" alt="Search">
           <input type="text" value="" placeholder="Type your question" class="faq-form__input">
