--- a/src/partial/faq.html
+++ b/src/partial/faq.html
@@ -1,7 +1,7 @@
 <section class="faq__wrapper">
   <div class="faq">
     <div class="faq__sidebar-wrapper">
-      <ul class="faq__sidebar">
+      <ul class="faq__sidebar" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000" data-aos-offset="0">
         <li class="faq__sidebar-item"><a class="faq__sidebar-item-link" href="#goodToKnows">The good to knows</a></li>
         <li class="faq__sidebar-item"><a class="faq__sidebar-item-link" href="#appRelatedQuestions">App related questions</a></li>
         <li class="faq__sidebar-item"><a class="faq__sidebar-item-link" href="#troubleshootings">Troubleshootings</a></li>
@@ -10,7 +10,7 @@
     </div>
 
     <div class="faq__content">
-      <section id="goodToKnows" class="faq__section">
+      <section id="goodToKnows" class="faq__section" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000" data-aos-offset="0">
          <p class="faq__section-title">The good to knows</p>
          <div class="faq__accordeon-list-wrapper">
             <div class="faq__accordeon-list">
@@ -101,7 +101,7 @@
 
       </section>
 
-      <section id="appRelatedQuestions" class="faq__section">
+      <section id="appRelatedQuestions" class="faq__section" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000" data-aos-offset="0">
         <p class="faq__section-title">App related questions</p>
         <div class="faq__accordeon-list-wrapper">
             <div class="faq__accordeon-list">
@@ -212,7 +212,7 @@
          </div>
       </section>
 
-      <section id="troubleshootings" class="faq__section">
+      <section id="troubleshootings" class="faq__section" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000" data-aos-offset="0">
         <p class="faq__section-title">Troubleshootings</p>
         <div class="faq__accordeon-list-wrapper">
             <div class="faq__accordeon-list">
@@ -302,7 +302,7 @@
          </div>
       </section>
 
-      <section id="housekeeping" class="faq__section">
+      <section id="housekeeping" class="faq__section" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000" data-aos-offset="0">
         <p class="faq__section-title">Housekeeping</p>
         <div class="faq__accordeon-list-wrapper">
             <div class="faq__accordeon-list">
@@ -374,7 +374,7 @@
 
     </div>
   </div>
-  <div class="faq__footer">
+  <div class="faq__footer" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000" data-aos-offset="0">
     <p class="faq__footer-title">Got a question not answered here?</p>
     <a class="faq__footer-link" href="#">
         Check out our Help Centre!
