Styled choose us section

--- a/src/partial/about-main.html
+++ b/src/partial/about-main.html
@@ -43,6 +43,7 @@
       </div>
     </div>
     <p class="about-main__desc">
-      <span class="about-main__desc--blue">Simplicity</span>. It's our guiding light and the <br /> fundamental value we turn to when shaping  <br /> that we do. We believe that the best solutions <br /> are often the simplest - and we've made it our <br /> mission <span class="about-main__desc--blue">to provide simple ways for you <br /> to better engage your followers.</span></p>
+      <span class="about-main__desc--blue">Simplicity</span>. It's our guiding light and the <br /> fundamental value we turn to when shaping  <br /> that we do. We believe that the best solutions <br /> are often the simplest - and we've made it our <br /> mission <span class="about-main__desc--blue">to provide simple ways for you <br /> to better engage your followers.</span>
+    </p>
   </div>
 </section>
