--- a/src/partial/showcase.html
+++ b/src/partial/showcase.html
@@ -4,11 +4,21 @@
     <p class="showcase__desc">We are proud to have helped these amazing ideas come <br /> to life with our custom app development service</p>
     <div class="showcase__swiper swiper-container">
         <div class="swiper-wrapper showcase__swiper-wrapper">
-          <div class="swiper-slide showcase__swiper-item"><img src="images/swiper-icon3.svg" class="showcase__swiper-item-img" alt="Image"></div>
-          <div class="swiper-slide showcase__swiper-item"><img src="images/swiper-icon1.svg" class="showcase__swiper-item-img" alt="Image"></div>
-          <div class="swiper-slide showcase__swiper-item"><img src="images/swiper-icon3.svg" class="showcase__swiper-item-img" alt="Image"></div>
-          <div class="swiper-slide showcase__swiper-item"><img src="images/swiper-icon1.svg" class="showcase__swiper-item-img" alt="Image"></div>
-          <div class="swiper-slide showcase__swiper-item"><img src="images/swiper-icon2.svg" class="showcase__swiper-item-img" alt="Image"></div>
+            <div class="swiper-slide showcase__swiper-item">
+                <img src="images/swiper-icon3.png" srcset="images/swiper-icon3@2x.png 2x, images/swiper-icon3@3x.png 3x" alt="Image">
+            </div>
+          <div class="swiper-slide showcase__swiper-item">
+              <img src="images/swiper-icon1.png" srcset="images/swiper-icon1@2x.png 2x, images/swiper-icon1@3x.png 3x" alt="Image">
+          </div>
+          <div class="swiper-slide showcase__swiper-item">
+              <img src="images/swiper-icon3.png" srcset="images/swiper-icon3@2x.png 2x, images/swiper-icon3@3x.png 3x" alt="Image">
+          </div>
+          <div class="swiper-slide showcase__swiper-item">
+              <img src="images/swiper-icon1.png" srcset="images/swiper-icon1@2x.png 2x, images/swiper-icon1@3x.png 3x" alt="Image">
+          </div>
+          <div class="swiper-slide showcase__swiper-item">
+              <img src="images/swiper-icon2.png" srcset="images/swiper-icon2@2x.png 2x, images/swiper-icon2@3x.png 3x" alt="Image">
+          </div>
         </div>
       </div>
       </div>
