Styled about page

--- a/src/partial/who-we-are.html
+++ b/src/partial/who-we-are.html
@@ -1,8 +1,8 @@
 <section class="who-we-are__wrapper">
   <div class="who-we-are">
-      <p class="who-we-are__title">Who we are</p>
-      <p class="who-we-are__subTitle">My Mobile App is a product of Appswiz, a company based out of <br /> Melbourne, Australia. Our values revolve around empowerment, <br /> teamwork, enjoyment and quality. We are a close knit team <br /> striving to create a great experience for both our customers <br /> and our customers' customers.</p>
-      <ul class="who-we-are__list">
+      <p class="who-we-are__title" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">Who we are</p>
+      <p class="who-we-are__subTitle" data-aos="fade-up"  data-aos-delay="150"  data-aos-duration="1000">My Mobile App is a product of Appswiz, a company based out of <br /> Melbourne, Australia. Our values revolve around empowerment, <br /> teamwork, enjoyment and quality. We are a close knit team <br /> striving to create a great experience for both our customers <br /> and our customers' customers.</p>
+      <ul class="who-we-are__list" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000">
         <li class="who-we-are__item">
           <img class="who-we-are__item-img" src="images/user-image.png" srcset="images/user-image@2x.png 2x, images/user-image@3x.png 3x" alt="User">
           <p class="who-we-are__item-name">Morris Richards</p>
