--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,3 +22,6 @@
 @import "blocks/about-main";
 @import "blocks/choose-us";
 @import "blocks/who-we-are";
+@import "blocks/about-counter";
+@import "blocks/about-thought";
+@import "blocks/about-anchor";
