--- a/src/partial/about-main.html
+++ b/src/partial/about-main.html
@@ -1,8 +1,8 @@
 <section class="about-main__wrapper">
   <div class="about-main">
-    <h3 class="about-main__title">All that we do is about <br /> our customers</h3>
-    <h2 class="about-main__subTitle">Except this page. This is  <br /> all about us.</h2>
-    <div class="about-main__gallery-wrapper">
+    <h3 class="about-main__title" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">All that we do is about <br /> our customers</h3>
+    <h2 class="about-main__subTitle" data-aos="fade-up"  data-aos-delay="150"  data-aos-duration="1000">Except this page. This is  <br /> all about us.</h2>
+    <div class="about-main__gallery-wrapper" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000">
       <div class="about-main__gallery">
         <div class="about-main__gallery-item">
           <a class="about-main__gallery-item-link" href="images/about-image-1.svg">
@@ -42,7 +42,7 @@
           </div>
       </div>
     </div>
-    <p class="about-main__desc">
+    <p class="about-main__desc" data-aos="fade-up"  data-aos-delay="150"  data-aos-duration="1000">
       <span class="about-main__desc--blue">Simplicity</span>. It's our guiding light and the <br /> fundamental value we turn to when shaping  <br /> that we do. We believe that the best solutions <br /> are often the simplest - and we've made it our <br /> mission <span class="about-main__desc--blue">to provide simple ways for you <br /> to better engage your followers.</span>
     </p>
   </div>
