--- a/src/partial/choose-us.html
+++ b/src/partial/choose-us.html
@@ -1,9 +1,9 @@
 <section class="choose-us__wrapper">
   <div class="choose-us">
-    <div class="choose-us__desc-wrapper">
+    <div class="choose-us__desc-wrapper" data-aos="fade-up"  data-aos-delay="100"  data-aos-duration="1000">
       <p class="choose-us__title">Why <br /> choose us</p>
       <p class="choose-us__desc">Uses your website as the base <br /> for your mobile app. This allows <br />you to maintain consistency <br />across your digital platforms <br /> while providing a great user <br /> experience for your customers.</p>
     </div>
-      <img class="choose-us__img" src="images/choose-us-image.png" srcset="images/choose-us-image@2x.png 2x, images/choose-us-image@3x.png 3x" alt="Choose Us">
+      <img class="choose-us__img" src="images/choose-us-image.png" srcset="images/choose-us-image@2x.png 2x, images/choose-us-image@3x.png 3x" alt="Choose Us" data-aos="fade-up"  data-aos-delay="200"  data-aos-duration="1000">
   </div>
 </section>
